--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "lint": "stylelint '**/*.scss'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "node ./scripts/install-husky.js"
   },
   "private": true,
   "peerDependencies": {
@@ -16,6 +17,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
+    "@commitlint/cli": "^13.1.0",
+    "@commitlint/config-conventional": "^13.1.0",
     "@storybook/addon-actions": "^6.5.10",
     "@storybook/addon-essentials": "^6.5.10",
     "@storybook/addon-interactions": "^6.5.10",
@@ -26,27 +29,37 @@
     "@storybook/react": "^6.5.10",
     "@storybook/testing-library": "^0.0.13",
     "@types/react": "^18.0.17",
+    "@typescript-eslint/eslint-plugin": "5.40.1",
+    "@typescript-eslint/parser": "5.40.1",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
+    "eslint": "8.25.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-airbnb-typescript": "17.0.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-react": "7.31.10",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "husky": "8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.54.4",
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
+    "stylelint": "^14.10.0",
+    "stylelint-config-sass-guidelines": "^9.0.1",
+    "stylelint-order": "^5.0.0",
+    "stylelint-scss": "^4.3.0",
+    "stylelint-selector-bem-pattern": "^2.1.1",
     "ts-loader": "^9.3.1",
-    "typescript": "^4.7.4",
+    "typescript": "4.8.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
   "dependencies": {
     "@svgr/webpack": "^6.3.1",
     "classnames": "^2.3.1",
-    "mono-icons": "^1.3.1",
-    "stylelint": "^14.10.0",
-    "stylelint-config-sass-guidelines": "^9.0.1",
-    "stylelint-order": "^5.0.0",
-    "stylelint-scss": "^4.3.0",
-    "stylelint-selector-bem-pattern": "^2.1.1"
+    "mono-icons": "^1.3.1"
   },
   "main": "dist/index.js",
   "files": [
