feat: lint staged

--- a/package.json
+++ b/package.json
@@ -1,16 +1,34 @@
 {
   "name": "@etchteam/mobius",
   "version": "0.0.0",
-  "description": "WRAP’s design system",
+  "description": "WRAP's design system",
   "scripts": {
     "build": "webpack --mode production",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "lint": "stylelint '**/*.scss'",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "commitlint": "commitlint",
+    "pre-commit": "lint-staged",
     "prepare": "node ./scripts/install-husky.js"
   },
   "private": true,
+  "engines": {
+    "npm": ">=8.5.5",
+    "node": ">=16.15.0"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "stylelint --fix --allow-empty-input"
+    ],
+    "*.{css,sss,less,scss,sass}": "stylelint --fix --allow-empty-input"
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
+  },
   "peerDependencies": {
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
@@ -41,8 +59,10 @@
     "eslint-plugin-react": "7.31.10",
     "eslint-plugin-react-hooks": "4.6.0",
     "husky": "8.0.1",
+    "lint-staged": "13.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "prettier": "^2.3.2",
     "sass": "^1.54.4",
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
