--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,4 +1,13 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["**/*.ts", "**/*.js", "**/*.ts"]
+  "include": [
+    "**/*.ts",
+    "**/*.js",
+    "**/*.tsx",
+    ".eslintrc.js"
+  ],
+  "exclude": [
+    "dist",
+    "node_modules",
+  ]
 }
