refactor: try to stop creating stories declarations files

--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,13 +1,10 @@
 {
   "extends": "./tsconfig.json",
   "include": [
-    "**/*.ts",
     "**/*.js",
+    "**/*.ts",
+    "**/*.jsx",
     "**/*.tsx",
     ".eslintrc.js"
-  ],
-  "exclude": [
-    "dist",
-    "node_modules",
   ]
 }
