--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test:a11y:from-build": "node ./scripts/storybook-a11y-tests.js",
     "commitlint": "commitlint",
     "pre-commit": "lint-staged",
-    "prepare": "node ./scripts/install-husky.js",
+    "prepare": "node ./scripts/install-husky.js && node ./scripts/export-components.js",
     "release": "semantic-release"
   },
   "private": true,
@@ -46,6 +46,7 @@
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/git": "^10.0.1",
     "@shopify/storybook-a11y-test": "1.1.0",
+    "@storybook/addon-a11y": "6.5.12",
     "@storybook/addon-actions": "^6.5.10",
     "@storybook/addon-essentials": "^6.5.10",
     "@storybook/addon-interactions": "^6.5.10",
@@ -63,10 +64,14 @@
     "eslint": "8.25.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "17.0.0",
+    "eslint-import-resolver-alias": "1.1.2",
+    "eslint-import-resolver-typescript": "3.5.1",
+    "eslint-import-resolver-webpack": "0.13.2",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-react": "7.31.10",
     "eslint-plugin-react-hooks": "4.6.0",
+    "glob": "8.0.3",
     "husky": "8.0.1",
     "lint-staged": "13.0.3",
     "postcss": "8.4.18",
@@ -83,6 +88,8 @@
     "stylelint-scss": "^4.3.0",
     "stylelint-selector-bem-pattern": "^2.1.1",
     "ts-loader": "^9.3.1",
+    "tsconfig-paths": "4.1.0",
+    "tsconfig-paths-webpack-plugin": "4.0.0",
     "typescript": "4.8.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
