--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
+    "baseUrl": ".",
     "paths": {
       "components/*": [
         "./src/components/*"
@@ -22,7 +23,6 @@
   },
   "exclude": [
     "dist",
-    "node_modules",
-    "src/**/*.stories.tsx"
+    "node_modules"
   ]
 }
