--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Install dependencies
         run: npm ci --legacy-peer-deps
 
+      - name: Build
+        run: npm run build
+
       - name: Publish
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
