--- a/package.json
+++ b/package.json
@@ -45,15 +45,13 @@
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/git": "^10.0.1",
     "@shopify/storybook-a11y-test": "1.1.0",
-    "@storybook/addon-a11y": "6.5.12",
+    "@storybook/addon-a11y": "6.5.13",
     "@storybook/addon-actions": "^6.5.12",
-    "@storybook/addon-essentials": "^6.5.12",
-    "@storybook/addon-interactions": "^6.5.12",
-    "@storybook/addon-links": "^6.5.12",
-    "@storybook/builder-webpack5": "^6.5.12",
-    "@storybook/manager-webpack5": "^6.5.12",
+    "@storybook/addon-links": "^6.5.13",
+    "@storybook/builder-webpack5": "^6.5.13",
+    "@storybook/manager-webpack5": "^6.5.13",
     "@storybook/preset-scss": "^1.0.3",
-    "@storybook/react": "^6.5.12",
+    "@storybook/react": "^6.5.13",
     "@storybook/testing-library": "^0.0.13",
     "@types/react": "^18.0.17",
     "@typescript-eslint/eslint-plugin": "5.40.1",
@@ -74,12 +72,12 @@
     "glob": "8.0.3",
     "husky": "8.0.1",
     "lint-staged": "13.0.3",
+    "mini-css-extract-plugin": "2.6.1",
     "postcss": "8.4.18",
     "prettier": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.54.4",
-    "sass-loader": "^13.0.2",
     "semantic-release": "19.0.5",
     "style-loader": "^3.3.1",
     "stylelint": "^14.10.0",
@@ -100,7 +98,6 @@
     "date-fns": "2.29.3",
     "mono-icons": "1.3.1",
     "normalize.css": "8.0.1",
-    "react-day-picker": "^7.4.10",
     "react-hook-form": "7.38.0",
     "react-textarea-autosize": "^8.3.3"
   },
