--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.2.2",
   "description": "WRAP's design system",
   "scripts": {
-    "build": "webpack --mode production",
+    "build": "node ./scripts/build.js",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "lint": "npm run lint:js && npm run lint:css",
@@ -39,9 +39,15 @@
     "react-dom": ">=16.8.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.10",
+    "@babel/core": "7.19.6",
+    "@babel/preset-env": "7.19.4",
+    "@babel/preset-react": "7.18.6",
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
+    "@rollup/plugin-babel": "6.0.2",
+    "@rollup/plugin-commonjs": "23.0.2",
+    "@rollup/plugin-node-resolve": "15.0.1",
+    "@rollup/plugin-typescript": "9.0.2",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/git": "^10.0.1",
     "@shopify/storybook-a11y-test": "1.1.0",
@@ -77,6 +83,8 @@
     "prettier": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rollup": "3.2.5",
+    "rollup-plugin-postcss": "4.0.2",
     "sass": "^1.54.4",
     "semantic-release": "19.0.5",
     "style-loader": "^3.3.1",
@@ -101,8 +109,11 @@
     "react-hook-form": "7.38.0",
     "react-textarea-autosize": "^8.3.3"
   },
-  "main": "dist/index.js",
+  "main": "dist/mobius.cjs.js",
+  "module": "dist/mobius.esm.js",
+  "src": "src/index.tsx",
   "files": [
-    "dist"
+    "dist",
+    "src"
   ]
 }
