--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "rollup": "3.2.5",
     "rollup-plugin-postcss": "4.0.2",
     "sass": "^1.54.4",
+    "sass-loader": "13.1.0",
     "semantic-release": "19.0.5",
     "style-loader": "^3.3.1",
     "stylelint": "^14.10.0",
