--- a/package.json
+++ b/package.json
@@ -52,8 +52,7 @@
     "@semantic-release/git": "^10.0.1",
     "@shopify/storybook-a11y-test": "1.1.0",
     "@storybook/addon-a11y": "6.5.13",
-    "@storybook/addon-actions": "^6.5.12",
-    "@storybook/addon-links": "^6.5.13",
+    "@storybook/addon-docs": "6.5.13",
     "@storybook/builder-webpack5": "^6.5.13",
     "@storybook/manager-webpack5": "^6.5.13",
     "@storybook/preset-scss": "^1.0.3",
