--- a/package.json
+++ b/package.json
@@ -109,8 +109,8 @@
     "react-hook-form": "7.38.0",
     "react-textarea-autosize": "^8.3.3"
   },
-  "main": "dist/mobius.cjs.js",
-  "module": "dist/mobius.esm.js",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
   "src": "src/index.tsx",
   "files": [
     "dist",
