--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.5.13",
     "@storybook/testing-library": "^0.0.13",
+    "@types/lodash": "4.14.189",
     "@types/react": "^18.0.17",
     "@typescript-eslint/eslint-plugin": "5.40.1",
     "@typescript-eslint/parser": "5.40.1",
