--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "react-textarea-autosize": "^8.3.3"
   },
   "main": "dist/index.cjs.js",
+  "types": "dist/index.d.ts",
   "module": "dist/index.esm.js",
   "src": "src/index.tsx",
   "files": [
