--- a/package.json
+++ b/package.json
@@ -102,10 +102,12 @@
   },
   "dependencies": {
     "@svgr/webpack": "5.5.0",
+    "a11y-dialog": "^7.5.2",
     "classnames": "^2.3.1",
     "date-fns": "2.29.3",
     "mono-icons": "1.3.1",
     "normalize.css": "8.0.1",
+    "react-a11y-dialog": "^6.2.0",
     "react-hook-form": "7.38.0",
     "react-textarea-autosize": "^8.3.3"
   },
