--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup": "3.2.5",
+    "rollup-plugin-copy": "3.4.0",
     "rollup-plugin-postcss": "4.0.2",
     "sass": "^1.54.4",
     "sass-loader": "13.1.0",
