--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "mono-icons": "1.3.1",
     "normalize.css": "8.0.1",
     "react-a11y-dialog": "^6.2.0",
+    "react-collapse": "^5.1.1",
     "react-textarea-autosize": "^8.3.3"
   },
   "main": "dist/index.cjs.js",
