--- a/package.json
+++ b/package.json
@@ -104,14 +104,18 @@
     "webpack-cli": "^4.10.0"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
     "@svgr/webpack": "5.5.0",
     "a11y-dialog": "^7.5.2",
     "classnames": "^2.3.1",
-    "date-fns": "2.29.3",
+    "date-fns": "^2.29.3",
+    "focus-trap-react": "^10.0.2",
     "mono-icons": "1.3.1",
     "normalize.css": "8.0.1",
     "react-a11y-dialog": "^6.2.0",
     "react-collapse": "^5.1.1",
+    "react-day-picker": "^8.4.1",
+    "react-popper": "^2.3.0",
     "react-textarea-autosize": "^8.3.3"
   },
   "main": "dist/index.cjs.js",
