--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "react-a11y-dialog": "^6.2.0",
     "react-collapse": "^5.1.1",
     "react-day-picker": "^8.4.1",
+    "react-minimal-pie-chart": "^8.4.0",
     "react-popper": "^2.3.0",
     "react-textarea-autosize": "^8.3.3"
   },
