--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -9,6 +9,9 @@ pull_request_rules:
         - check-success=SonarCloud Code Analysis
         - label!=wontfix
     actions:
+      review:
+        type: APPROVE
+        message: Automatically approving dependabot
       merge:
         method: merge
   - name: Auto-squash when all builds pass and the PR has been approved
