--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,12 +1,11 @@
+---
 name: 🚀 Publish
 on:
   push:
     branches:
     - main
-
 env:
   HUSKY: 0
-
 jobs:
   publish:
     name: Publish
@@ -17,19 +16,14 @@ jobs:
         with:
           fetch-depth: 0
           persist-credentials: false
-
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16.x'
-          registry-url: 'https://registry.npmjs.org'
-
+          node-version: '18.x'
       - name: Install dependencies
-        run: npm ci --legacy-peer-deps
-
+        run: npm ci
       - name: Build
         run: npm run build
-
       - name: Publish
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
