--- a/.github/workflows/a11y-tests.yml
+++ b/.github/workflows/a11y-tests.yml
@@ -1,29 +1,25 @@
+---
 name: 🧪 A11y tests
 on: [pull_request]
-
 env:
   HUSKY: 0
-
 jobs:
   test:
+    strategy:
+      matrix:
+        version: [16, 18]
     name: A11y tests
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16'
-          registry-url: 'https://registry.npmjs.org'
-
-      - name: Install dependencies
+          node-version: ${{ matrix.version }}
+      - name: ⚙️ Install dependencies
         run: npm ci
-
-      - name: 👕 Build Storybook
-        run: |
-          npm run build-storybook
-
+      - name: 🔨 Build Storybook
+        run: npm run build-storybook
       - name: 📋 Run A11y tests
         run: npm run test:a11y:from-build
