--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,26 +1,23 @@
+---
 name: 🧪 Tests
 on: [pull_request]
-
 env:
   HUSKY: 0
-
 jobs:
   test:
+    strategy:
+      matrix:
+        version: [16, 18]
     name: Linting & Unit Tests
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16'
-          registry-url: 'https://registry.npmjs.org'
-
-      - name: Install dependencies
-        run: npm ci --legacy-peer-deps
-
+          node-version: ${{ matrix.version }}
+      - name: ⚙️ Install dependencies
+        run: npm ci
       - name: 👕 Linting
-        run: |
-          npm run lint
+        run: npm run lint
