--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "husky": "8.0.1",
     "lint-staged": "13.0.3",
     "mini-css-extract-plugin": "2.6.1",
-    "postcss": "8.4.18",
+    "postcss": "^8.4.28",
     "prettier": "^2.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
