docs: add homepage and license info to package

--- a/package.json
+++ b/package.json
@@ -116,5 +116,7 @@
     "dist",
     "src"
   ],
-  "readme": "README.md"
+  "readme": "README.md",
+  "license": "MIT",
+  "homepage": "https://mobius.wrap.ngo"
 }
