--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "lint-staged": "15.2.7",
     "mini-css-extract-plugin": "2.7.7",
     "postcss": "^8.4.28",
-    "prettier": "^3.3.3",
+    "prettier": "2.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.5",
