--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "lint-staged": "15.2.7",
     "mini-css-extract-plugin": "2.7.7",
     "postcss": "^8.4.28",
-    "prettier": "2.8.1",
+    "prettier": "^2.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.5",
@@ -84,7 +84,7 @@
     "sass-loader": "13.1.0",
     "semantic-release": "24.0.0",
     "style-loader": "^3.3.1",
-    "stylelint": "^16.8.1",
+    "stylelint": "^15.10.1",
     "ts-loader": "^9.3.1",
     "tsconfig-paths": "4.1.0",
     "tsconfig-paths-webpack-plugin": "4.0.0",
