--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "@babel/core": "7.25.2",
     "@babel/preset-env": "7.23.8",
     "@babel/preset-react": "7.18.6",
-    "@commitlint/cli": "^13.1.0",
-    "@commitlint/config-conventional": "^13.1.0",
+    "@commitlint/cli": "^19.4.1",
+    "@commitlint/config-conventional": "^19.4.1",
     "@etchteam/eslint-config": "^2.0.12",
     "@etchteam/storybook-addon-css-variables-theme": "1.3.3",
     "@etchteam/stylelint-config": "^1.0.1",
@@ -82,7 +82,7 @@
     "rollup-plugin-postcss": "4.0.2",
     "sass": "^1.54.4",
     "sass-loader": "13.1.0",
-    "semantic-release": "24.0.0",
+    "semantic-release": "^24.1.0",
     "style-loader": "^3.3.1",
     "stylelint": "^15.10.1",
     "ts-loader": "^9.3.1",
@@ -106,6 +106,9 @@
     "react-minimal-pie-chart": "^8.4.0",
     "react-popper": "^2.3.0",
     "react-textarea-autosize": "^8.3.3"
+  },
+  "overrides": {
+    "conventional-changelog-conventionalcommits": ">= 8.0.0"
   },
   "main": "dist/index.cjs.js",
   "types": "dist/index.d.ts",
