--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "WRAP's design system",
   "scripts": {
     "build": "node ./scripts/build.js",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
     "lint": "npm run lint:js && npm run lint:css",
     "lint:fix": "npm run lint:js:fix && npm run lint:css:fix",
     "lint:js": "eslint --ext .js,.jsx,.ts,.tsx ./",
@@ -43,10 +43,11 @@
     "@babel/core": "7.25.2",
     "@babel/preset-env": "7.23.8",
     "@babel/preset-react": "7.18.6",
+    "@babel/preset-typescript": "^7.24.7",
     "@commitlint/cli": "^19.4.1",
     "@commitlint/config-conventional": "^19.4.1",
     "@etchteam/eslint-config": "^2.0.12",
-    "@etchteam/storybook-addon-css-variables-theme": "1.3.3",
+    "@etchteam/storybook-addon-css-variables-theme": "^3.0.0",
     "@etchteam/stylelint-config": "^1.0.1",
     "@rollup/plugin-babel": "6.0.4",
     "@rollup/plugin-commonjs": "23.0.2",
@@ -54,14 +55,15 @@
     "@rollup/plugin-typescript": "9.0.2",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/git": "^10.0.1",
-    "@shopify/storybook-a11y-test": "1.1.0",
-    "@storybook/addon-a11y": "6.5.13",
-    "@storybook/addon-docs": "^6.5.13",
-    "@storybook/builder-webpack5": "^6.5.13",
-    "@storybook/manager-webpack5": "^6.5.13",
+    "@shopify/storybook-a11y-test": "^1.2.1",
+    "@storybook/addon-a11y": "^8.3.3",
+    "@storybook/addon-docs": "^8.3.3",
+    "@storybook/addon-webpack5-compiler-babel": "^3.0.3",
     "@storybook/preset-scss": "^1.0.3",
-    "@storybook/react": "^6.5.13",
-    "@storybook/testing-library": "^0.0.13",
+    "@storybook/react": "^8.3.3",
+    "@storybook/react-webpack5": "^8.3.3",
+    "@storybook/test": "^8.3.3",
+    "@storybook/theming": "^8.3.3",
     "@types/lodash": "4.14.189",
     "@types/react": "^18.0.17",
     "babel-loader": "^9.1.3",
@@ -89,6 +91,7 @@
     "tsconfig-paths": "4.1.0",
     "tsconfig-paths-webpack-plugin": "4.0.0",
     "typescript": "4.8.4",
+    "url-loader": "^4.1.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
