test: use storybook test runner

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint:css": "stylelint \"./**/*.{css,scss}\"",
     "lint:css:fix": "npm run lint:css -- --fix",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "test:a11y:from-build": "node ./scripts/storybook-a11y-tests.js",
+    "test-storybook": "npx concurrently -k -s first -n \"SB,TEST\" -c \"magenta,blue\" \"npx http-server storybook-static --port 6006 --silent\" \"npx wait-on tcp:6006 && test-storybook\"",
     "commitlint": "commitlint",
     "pre-commit": "lint-staged",
     "prepare": "node ./scripts/install-husky.js && node ./scripts/export-components.js",
@@ -55,7 +55,6 @@
     "@rollup/plugin-typescript": "9.0.2",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/git": "^10.0.1",
-    "@shopify/storybook-a11y-test": "^1.2.1",
     "@storybook/addon-a11y": "^8.3.3",
     "@storybook/addon-docs": "^8.3.3",
     "@storybook/addon-webpack5-compiler-babel": "^3.0.3",
@@ -63,9 +62,11 @@
     "@storybook/react": "^8.3.3",
     "@storybook/react-webpack5": "^8.3.3",
     "@storybook/test": "^8.3.3",
+    "@storybook/test-runner": "^0.19.1",
     "@storybook/theming": "^8.3.3",
     "@types/lodash": "4.14.189",
     "@types/react": "^18.0.17",
+    "axe-playwright": "^2.0.3",
     "babel-loader": "^9.1.3",
     "chromatic": "^11.7.0",
     "css-loader": "^6.7.1",
