--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,8 @@ jobs:
           cache: npm
       - run: npm ci
       - run: npm run build-storybook
-      - run: npm run test:a11y:from-build
+      - run: npx playwright install --with-deps
+      - run: npm run test-storybook
   lint:
     name: 🧹 Lint
     runs-on: ubuntu-latest
