--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,22 @@ env:
 permissions:
   contents: read
 jobs:
+  build:
+    strategy:
+      matrix:
+        version: [18, 20]
+    name: 🏗️ Build
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version-file: .nvmrc
+          cache: npm
+      - run: npm ci
+      - run: npm run build
   test:
     strategy:
       matrix:
