--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@storybook/theming": "^8.3.3",
     "@types/lodash": "4.14.189",
     "@types/react": "^18.0.17",
+    "autoprefixer": "^10.4.20",
     "axe-playwright": "^2.0.3",
     "babel-loader": "^9.1.3",
     "chromatic": "^11.7.0",
