--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
   build:
     strategy:
       matrix:
-        version: [18, 20]
+        version: [18, 20, 22]
     name: 🏗️ Build
     runs-on: ubuntu-latest
     permissions:
@@ -25,7 +25,7 @@ jobs:
   test:
     strategy:
       matrix:
-        version: [18, 20]
+        version: [18, 20, 22]
     name: 🧪 A11y tests
     runs-on: ubuntu-latest
     steps:
