--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "engines": {
     "npm": "^9 || ^10",
-    "node": "^18 || ^20"
+    "node": "^18 || ^20 || ^22"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
