--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -24,7 +24,7 @@ pull_request_rules:
     actions:
       request_reviews:
         teams:
-          - devs
+          - Etch
         random_count: 2
   - name: Automatically assign to author
     conditions:
