--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "mini-css-extract-plugin": "2.7.7",
     "postcss": "^8.4.28",
     "prettier": "^3.3.3",
+    "raw-loader": "4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.5",
