--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -1,6 +1,6 @@
 ---
 pull_request_rules:
-  - name: Automatically approve and merge dependabot PRs
+  - name: Automatically approve and merge dependabot pull requests
     conditions:
       - author=dependabot[bot]
       - label!=wontfix
@@ -10,14 +10,14 @@ pull_request_rules:
         message: Automatically approving dependabot
       merge:
         method: merge
-  - name: Automatically merge when the PR has been approved and there are no comments
+  - name: Automatically merge when the pull request has been approved and there are no comments
     conditions:
       - "#approved-reviews-by>=1"
       - "#changes-requested-reviews-by=0"
     actions:
       merge:
         method: merge
-  - name: Ask for reviews
+  - name: Ask for reviews on open pull requests
     conditions:
       - -closed
       - -draft
@@ -26,7 +26,7 @@ pull_request_rules:
         teams:
           - Etch
         random_count: 2
-  - name: Automatically assign to author
+  - name: Automatically assign to the pull request author
     conditions:
       - author!=dependabot[bot]
     actions:
