refactor: rename to evergreen

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,6 @@
   "git.inputValidationLength": 100,
   "sonarlint.connectedMode.project": {
     "connectionId": "Etch",
-    "projectKey": "etchteam_mobius"
+    "projectKey": "wrap-org_evergreen"
   },
 }
