--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@etchteam/mobius",
+  "name": "@wrap.ngo/evergreen",
   "version": "8.5.0",
   "description": "WRAP's design system",
   "scripts": {
@@ -98,9 +98,9 @@
     "webpack-cli": "^4.10.0"
   },
   "dependencies": {
-    "@etchteam/mobius-tokens": "^1.4.0",
     "@formkit/auto-animate": "1.0.0-beta.6",
     "@popperjs/core": "^2.11.6",
+    "@wrap.ngo/tokens": "^2.0.1",
     "classnames": "^2.3.1",
     "date-fns": "^3.6.0",
     "focus-trap-react": "^10.0.2",
@@ -122,5 +122,5 @@
   ],
   "readme": "README.md",
   "license": "MIT",
-  "homepage": "https://mobius.wrap.ngo"
+  "homepage": "https://evergreen.wrap.ngo"
 }
