--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
   },
   "devDependencies": {
     "@babel/core": "7.25.2",
+    "@babel/plugin-proposal-class-properties": "7.18.6",
+    "@babel/plugin-proposal-decorators": "7.25.9",
     "@babel/preset-env": "7.23.8",
     "@babel/preset-react": "7.18.6",
     "@babel/preset-typescript": "^7.24.7",
@@ -104,6 +106,7 @@
     "classnames": "^2.3.1",
     "date-fns": "^3.6.0",
     "focus-trap-react": "^10.0.2",
+    "lit": "3.2.1",
     "mono-icons": "1.3.1",
     "normalize.css": "8.0.1",
     "react-a11y-dialog": "^7.3.0",
