--- a/package.json
+++ b/package.json
@@ -102,7 +102,7 @@
   "dependencies": {
     "@formkit/auto-animate": "1.0.0-beta.6",
     "@popperjs/core": "^2.11.6",
-    "@wrap.ngo/tokens": "file:../tokens",
+    "@wrap.ngo/tokens": "2.9.0",
     "classnames": "^2.3.1",
     "date-fns": "^3.6.0",
     "focus-trap-react": "^10.0.2",
