--- a/package.json
+++ b/package.json
@@ -52,10 +52,8 @@
     "@semantic-release/git": "^10.0.1",
     "@storybook/addon-a11y": "^8.3.3",
     "@storybook/addon-docs": "^8.3.3",
-    "@storybook/addon-webpack5-compiler-babel": "^3.0.3",
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^8.3.3",
-    "@storybook/react-webpack5": "^8.3.3",
     "@storybook/test": "^8.3.3",
     "@storybook/test-runner": "^0.19.1",
     "@storybook/theming": "^8.3.3",
@@ -63,15 +61,12 @@
     "@types/react": "^18.0.17",
     "autoprefixer": "^10.4.20",
     "axe-playwright": "^2.0.3",
-    "babel-loader": "^9.1.3",
     "chromatic": "^11.7.0",
     "conventional-changelog-conventionalcommits": "^7.0.0",
-    "css-loader": "^6.7.1",
     "eslint": "^8.29.0",
     "glob": "8.0.3",
     "husky": "8.0.1",
     "lint-staged": "15.2.7",
-    "mini-css-extract-plugin": "2.7.7",
     "postcss": "^8.4.28",
     "prettier": "^3.3.3",
     "react": "^18.2.0",
@@ -81,33 +76,19 @@
     "rollup-plugin-copy": "3.4.0",
     "rollup-plugin-postcss": "4.0.2",
     "sass": "^1.54.4",
-    "sass-loader": "13.1.0",
     "semantic-release": "^23.1.1",
-    "style-loader": "^3.3.1",
     "stylelint": "^15.10.1",
-    "ts-loader": "^9.3.1",
-    "tsconfig-paths": "4.1.0",
-    "tsconfig-paths-webpack-plugin": "4.0.0",
-    "typescript": "4.9.3",
-    "url-loader": "^4.1.1",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "typescript": "4.9.3"
   },
   "dependencies": {
     "@formkit/auto-animate": "1.0.0-beta.6",
-    "@popperjs/core": "^2.11.6",
     "@wrap.ngo/tokens": "2.9.0",
     "classnames": "^2.3.1",
-    "date-fns": "^3.6.0",
-    "focus-trap-react": "^10.0.2",
     "lit": "3.2.1",
     "mono-icons": "1.3.1",
     "normalize.css": "8.0.1",
     "react-a11y-dialog": "^7.3.0",
-    "react-day-picker": "^9.0.6",
-    "react-minimal-pie-chart": "^8.4.0",
-    "react-popper": "^2.3.0",
-    "react-textarea-autosize": "^8.3.3"
+    "react-minimal-pie-chart": "^8.4.0"
   },
   "main": "dist/index.cjs.js",
   "types": "dist/index.d.ts",
