build: update linting

--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "build-storybook": "storybook build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "test-storybook": "npx concurrently -k -s first -n \"SB,TEST\" -c \"magenta,blue\" \"npx http-server storybook-static --port 6006 --silent\" \"npx wait-on tcp:127.0.0.1:6006 && test-storybook\"",
-    "commitlint": "commitlint",
-    "pre-commit": "lint-staged",
-    "prepare": "node ./scripts/install-husky.js && node ./scripts/export-components.js",
+    "prepare": "node .husky/install.mjs && node ./scripts/export-components.js",
     "release": "semantic-release",
     "chromatic": "chromatic --exit-zero-on-changes"
   },
@@ -40,10 +38,10 @@
     "@babel/preset-env": "7.23.8",
     "@babel/preset-react": "7.18.6",
     "@babel/preset-typescript": "^7.24.7",
-    "@commitlint/cli": "^19.4.1",
+    "@commitlint/cli": "^19.7.1",
     "@commitlint/config-conventional": "^19.4.1",
-    "@etchteam/eslint-config": "^2.0.12",
-    "@etchteam/stylelint-config": "^1.0.1",
+    "@etchteam/eslint-config": "^2.2.32",
+    "@etchteam/stylelint-config": "^1.7.2",
     "@rollup/plugin-babel": "6.0.4",
     "@rollup/plugin-commonjs": "23.0.2",
     "@rollup/plugin-node-resolve": "15.0.1",
@@ -63,10 +61,10 @@
     "axe-playwright": "^2.0.3",
     "chromatic": "^11.7.0",
     "conventional-changelog-conventionalcommits": "^7.0.0",
-    "eslint": "^8.29.0",
+    "eslint": "^8.57.0",
     "glob": "8.0.3",
-    "husky": "8.0.1",
-    "lint-staged": "15.2.7",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.4.3",
     "postcss": "^8.4.28",
     "prettier": "^3.3.3",
     "react": "^18.2.0",
@@ -77,7 +75,7 @@
     "rollup-plugin-postcss": "4.0.2",
     "sass": "^1.54.4",
     "semantic-release": "^23.1.1",
-    "stylelint": "^15.10.1",
+    "stylelint": "^16.15.0",
     "typescript": "4.9.3"
   },
   "dependencies": {
