build: upgrade storybook and switch to vite

--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "WRAP's design system",
   "scripts": {
     "build": "node ./scripts/build.js",
-    "storybook": "storybook dev -p 6006",
+    "start": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "test-storybook": "npx concurrently -k -s first -n \"SB,TEST\" -c \"magenta,blue\" \"npx http-server storybook-static --port 6006 --silent\" \"npx wait-on tcp:127.0.0.1:6006 && test-storybook\"",
     "prepare": "node .husky/install.mjs && node ./scripts/export-components.js",
     "release": "semantic-release",
-    "chromatic": "chromatic --exit-zero-on-changes"
+    "chromatic": "chromatic --exit-zero-on-changes",
+    "storybook": "storybook dev -p 6006"
   },
   "engines": {
     "npm": "^9 || ^10",
@@ -38,6 +39,7 @@
     "@babel/preset-env": "7.23.8",
     "@babel/preset-react": "7.18.6",
     "@babel/preset-typescript": "^7.24.7",
+    "@chromatic-com/storybook": "^3.2.5",
     "@commitlint/cli": "^19.7.1",
     "@commitlint/config-conventional": "^19.4.1",
     "@etchteam/eslint-config": "^2.2.32",
@@ -48,13 +50,21 @@
     "@rollup/plugin-typescript": "9.0.2",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/git": "^10.0.1",
-    "@storybook/addon-a11y": "^8.3.3",
-    "@storybook/addon-docs": "^8.3.3",
+    "@storybook/addon-a11y": "^8.6.4",
+    "@storybook/addon-docs": "^8.6.4",
+    "@storybook/addon-essentials": "^8.6.4",
+    "@storybook/addon-interactions": "^8.6.4",
+    "@storybook/addon-mdx-gfm": "^8.6.4",
+    "@storybook/addon-onboarding": "^8.6.4",
+    "@storybook/blocks": "^8.6.4",
+    "@storybook/builder-vite": "^8.6.4",
+    "@storybook/manager-api": "^8.6.4",
     "@storybook/preset-scss": "^1.0.3",
-    "@storybook/react": "^8.3.3",
-    "@storybook/test": "^8.3.3",
-    "@storybook/test-runner": "^0.19.1",
-    "@storybook/theming": "^8.3.3",
+    "@storybook/react": "^8.6.4",
+    "@storybook/react-vite": "^8.6.4",
+    "@storybook/test": "^8.6.4",
+    "@storybook/test-runner": "^0.22.0",
+    "@storybook/theming": "^8.6.4",
     "@types/lodash": "4.14.189",
     "@types/react": "^18.0.17",
     "autoprefixer": "^10.4.20",
@@ -62,6 +72,7 @@
     "chromatic": "^11.7.0",
     "conventional-changelog-conventionalcommits": "^7.0.0",
     "eslint": "^8.57.0",
+    "eslint-plugin-storybook": "^0.11.4",
     "glob": "8.0.3",
     "husky": "^9.1.7",
     "lint-staged": "^15.4.3",
@@ -73,8 +84,9 @@
     "rollup": "3.29.5",
     "rollup-plugin-copy": "3.4.0",
     "rollup-plugin-postcss": "4.0.2",
-    "sass": "^1.54.4",
+    "sass-embedded": "^1.85.1",
     "semantic-release": "^23.1.1",
+    "storybook": "^8.6.4",
     "stylelint": "^16.15.0",
     "typescript": "4.9.3"
   },
