--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@storybook/test-runner": "^0.22.0",
     "@storybook/theming": "^8.6.4",
     "@swc/core": "1.11.7",
+    "@tsconfig/recommended": "^1.0.8",
     "@types/lodash": "4.14.189",
     "@types/react": "^18.0.17",
     "autoprefixer": "^10.4.20",
@@ -89,7 +90,7 @@
     "semantic-release": "^23.1.1",
     "storybook": "^8.6.4",
     "stylelint": "^16.15.0",
-    "typescript": "4.9.3"
+    "typescript": "^5.7.3"
   },
   "dependencies": {
     "@formkit/auto-animate": "1.0.0-beta.6",
