--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "@tsconfig/recommended/tsconfig.json",
   "compilerOptions": {
     "allowJs": true,
+    "module": "ESNext",
     "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
     "declaration": true,
