--- a/package.json
+++ b/package.json
@@ -27,21 +27,21 @@
     "react-dom": ">=18"
   },
   "devDependencies": {
-    "@babel/core": "7.25.2",
+    "@babel/core": "^7.26.9",
     "@babel/plugin-proposal-class-properties": "7.18.6",
     "@babel/plugin-proposal-decorators": "7.25.9",
-    "@babel/preset-env": "7.23.8",
-    "@babel/preset-react": "7.18.6",
-    "@babel/preset-typescript": "^7.24.7",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.26.0",
     "@chromatic-com/storybook": "^3.2.5",
-    "@commitlint/cli": "^19.7.1",
+    "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.4.1",
     "@etchteam/eslint-config": "^2.2.32",
     "@etchteam/stylelint-config": "^1.7.2",
-    "@rollup/plugin-babel": "6.0.4",
-    "@rollup/plugin-commonjs": "23.0.2",
-    "@rollup/plugin-node-resolve": "15.0.1",
-    "@rollup/plugin-typescript": "9.0.2",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^28.0.3",
+    "@rollup/plugin-node-resolve": "^16.0.0",
+    "@rollup/plugin-typescript": "^12.1.2",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/git": "^10.0.1",
     "@storybook/addon-a11y": "^8.6.4",
@@ -59,27 +59,26 @@
     "@storybook/test": "^8.6.4",
     "@storybook/test-runner": "^0.22.0",
     "@storybook/theming": "^8.6.4",
-    "@swc/core": "1.11.7",
+    "@swc/core": "^1.11.8",
     "@tsconfig/recommended": "^1.0.8",
-    "@types/lodash": "4.14.189",
-    "@types/react": "^18.0.17",
+    "@types/react": "^18.3.18",
     "autoprefixer": "^10.4.20",
-    "axe-playwright": "^2.0.3",
+    "axe-playwright": "^2.1.0",
     "chromatic": "^11.7.0",
     "conventional-changelog-conventionalcommits": "^7.0.0",
     "eslint": "^8.57.0",
     "eslint-plugin-storybook": "^0.11.4",
-    "glob": "8.0.3",
+    "glob": "^11.0.1",
     "husky": "^9.1.7",
     "lint-staged": "^15.4.3",
     "postcss": "^8.4.28",
     "prettier": "^3.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.41.5",
-    "rollup": "3.29.5",
-    "rollup-plugin-copy": "3.4.0",
-    "rollup-plugin-postcss": "4.0.2",
+    "react-hook-form": "^7.54.2",
+    "rollup": "^4.35.0",
+    "rollup-plugin-copy": "^3.5.0",
+    "rollup-plugin-postcss": "^4.0.2",
     "sass-embedded": "^1.85.1",
     "semantic-release": "^23.1.1",
     "storybook": "^8.6.4",
@@ -87,13 +86,13 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
-    "@formkit/auto-animate": "1.0.0-beta.6",
+    "@formkit/auto-animate": "^0.8.2",
     "@wrap.ngo/tokens": "2.10.0",
     "classnames": "^2.3.1",
     "lit": "3.2.1",
     "normalize.css": "8.0.1",
-    "react-a11y-dialog": "^7.3.0",
-    "react-minimal-pie-chart": "^8.4.0"
+    "react-a11y-dialog": "^7.4.0",
+    "react-minimal-pie-chart": "^9.1.0"
   },
   "main": "dist/index.cjs.js",
   "types": "dist/index.d.ts",
