--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "rollup": "^4.35.0",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-postcss": "^4.0.2",
+    "sass": "1.85.1",
     "sass-embedded": "^1.85.1",
     "semantic-release": "^23.1.1",
     "storybook": "^8.6.4",
