--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.1.0",
   "description": "WRAP's design system",
   "scripts": {
+    "example": "vite example",
     "build": "node ./scripts/build.js",
     "start": "storybook dev -p 6006",
     "build-storybook": "storybook build",
