--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,6 +1,20 @@
 {
   "extends": "./tsconfig.json",
+  "compilerOptions": {
+    "sourceMap": true,
+    "declaration": false,
+    "emitDeclarationOnly": false
+  },
+  "include": [
+    "src/**/*"
+  ],
   "exclude": [
-    "src/**/*.stories.tsx"
+    "src/**/*.stories.tsx",
+    "src/**/*.test.ts",
+    "src/**/*.test.tsx",
+    "src/docs/**/*",
+    "dist",
+    "node_modules",
+    "**/*.stories.*"
   ]
 }
