--- a/package.json
+++ b/package.json
@@ -3,64 +3,14 @@
   "version": "2.1.0",
   "description": "WRAP's design system",
   "type": "module",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
-  "types": "dist/types/index.d.ts",
   "exports": {
-    ".": {
+    "./components": {
+      "types": "./dist/types/index.d.ts",
       "import": "./dist/esm/index.js",
-      "require": "./dist/cjs/index.js",
-      "types": "./dist/types/index.d.ts"
+      "require": "./dist/cjs/index.js"
     },
-    "./button": {
-      "import": "./dist/esm/button.js",
-      "require": "./dist/cjs/button.js",
-      "types": "./dist/types/button.d.ts"
-    },
-    "./icon": {
-      "import": "./dist/esm/icon.js",
-      "require": "./dist/cjs/icon.js",
-      "types": "./dist/types/icon.d.ts"
-    },
-    "./input": {
-      "import": "./dist/esm/input.js",
-      "require": "./dist/cjs/input.js",
-      "types": "./dist/types/input.d.ts"
-    },
-    "./modal": {
-      "import": "./dist/esm/modal.js",
-      "require": "./dist/cjs/modal.js",
-      "types": "./dist/types/modal.d.ts"
-    },
-    "./card": {
-      "import": "./dist/esm/card.js",
-      "require": "./dist/cjs/card.js",
-      "types": "./dist/types/card.d.ts"
-    },
-    "./grid": {
-      "import": "./dist/esm/grid.js",
-      "require": "./dist/cjs/grid.js",
-      "types": "./dist/types/grid.d.ts"
-    },
-    "./alert": {
-      "import": "./dist/esm/alert.js",
-      "require": "./dist/cjs/alert.js", 
-      "types": "./dist/types/alert.d.ts"
-    },
-    "./loading-button": {
-      "import": "./dist/esm/loading-button.js",
-      "require": "./dist/cjs/loading-button.js",
-      "types": "./dist/types/loading-button.d.ts"
-    },
-    "./collapse": {
-      "import": "./dist/esm/collapse.js",
-      "require": "./dist/cjs/collapse.js",
-      "types": "./dist/types/collapse.d.ts"
-    },
-    "./browser": "./dist/browser/evergreen.min.js",
-    "./browser/dev": "./dist/browser/evergreen.js",
     "./styles": "./dist/styles/main.css",
-    "./browser/styles": "./dist/browser/evergreen.css"
+    "./fonts": "./dist/styles/fonts.css"
   },
   "files": [
     "dist",
@@ -69,14 +19,12 @@
   ],
   "scripts": {
     "start": "storybook dev -p 6006",
-    "build": "npm run clean && rollup -c && npm run build:types",
+    "build": "npm run build:clean && node ./scripts/export-components.js && node ./scripts/build.js && npm run build:types",
     "build:types": "tsc --project tsconfig.build.json --declaration --emitDeclarationOnly --outDir dist/types",
-    "build:dev": "npm run clean && rollup -c --environment NODE_ENV:development",
-    "build:watch": "npm run clean && rollup -c --watch",
-    "build-storybook": "storybook build",
-    "clean": "rm -rf dist",
+    "build:storybook": "storybook build",
+    "build:clean": "rm -rf dist",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "test-storybook": "npx concurrently -k -s first -n \"SB,TEST\" -c \"magenta,blue\" \"npx http-server storybook-static --port 6006 --silent\" \"npx wait-on tcp:127.0.0.1:6006 && test-storybook\"",
+    "test:storybook": "npx concurrently -k -s first -n \"SB,TEST\" -c \"magenta,blue\" \"npx http-server storybook-static --port 6006 --silent\" \"npx wait-on tcp:127.0.0.1:6006 && test-storybook\"",
     "prepare": "node .husky/install.mjs",
     "prepublishOnly": "npm run build",
     "release": "semantic-release",
@@ -87,32 +35,13 @@
     "npm": "^10 || ^11",
     "node": "^20 || ^22"
   },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "peerDependencies": {
-    "react": ">=18",
-    "react-dom": ">=18"
-  },
   "devDependencies": {
-    "@babel/core": "^7.26.9",
-    "@babel/plugin-proposal-class-properties": "7.18.6",
-    "@babel/plugin-proposal-decorators": "7.25.9",
-    "@babel/preset-env": "^7.26.9",
-    "@babel/preset-react": "^7.26.3",
-    "@babel/preset-typescript": "^7.26.0",
     "@chromatic-com/storybook": "^3.2.5",
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.4.1",
     "@etchteam/eslint-config": "^2.2.32",
     "@etchteam/storybook-addon-design-token-tables": "1.1.0",
     "@etchteam/stylelint-config": "^1.7.2",
-    "@rollup/plugin-babel": "^6.0.4",
-    "@rollup/plugin-commonjs": "^28.0.3",
-    "@rollup/plugin-node-resolve": "^16.0.0",
-    "@rollup/plugin-typescript": "^12.1.2",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/git": "^10.0.1",
     "@storybook/addon-a11y": "^8.6.4",
@@ -136,6 +65,9 @@
     "axe-playwright": "^2.1.0",
     "chromatic": "^11.7.0",
     "conventional-changelog-conventionalcommits": "^7.0.0",
+    "esbuild": "0.25.8",
+    "esbuild-plugin-copy": "^2.1.1",
+    "esbuild-sass-plugin": "^3.3.1",
     "eslint": "^8.57.0",
     "eslint-plugin-storybook": "^0.11.4",
     "glob": "^11.0.1",
@@ -146,9 +78,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
-    "rollup": "^4.35.0",
-    "rollup-plugin-copy": "^3.5.0",
-    "rollup-plugin-postcss": "^4.0.2",
     "sass": "1.85.1",
     "sass-embedded": "^1.85.1",
     "semantic-release": "^23.1.1",
