--- a/package.json
+++ b/package.json
@@ -97,4 +97,9 @@
   "readme": "README.md",
   "license": "MIT",
   "homepage": "https://evergreen.wrap.ngo"
+  ,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/wrap-org/evergreen"
+  }
 }
